test/inputs/expr/bad/escape-decreasing-indent.miros
@^{
    this is a literal
  this is another literal
}
